--- a/app.component.html
+++ b/app.component.html
@@ -21,9 +21,9 @@
           <!--collect the nav links,forms and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                  <li><a>Home</a></li>
-                  <li><a>about</a></li>
-                  <li><a>post a blog</a></li>
+                  <li><a [routerLink]="['/Home']" >Home</a></li>
+                  <li><a [routerLink]="['/about']">about</a></li>
+                  <li><a [routerLink]="['/create']">post a blog</a></li>
  
               </ul>
           </div>
